docs: Update for finding types (#914)
* manage-finding-statuses.qmd > manage-finding-types.qmd

* Drafting

* Fixing broken links

* Available types

* Editing

* Draft manage-finding-types.qmd

* Save point

* Save point

* Editing

* Edit: View all findings

* Edit: View model-specific findings

* Edit: Filter & sort model findings

* Edit: Customize model findings layout

* Editing

* More editing

* Proofreading

* Updating linked findings

* Updating training slides

* Proofreading

--- a/site/guide/model-validation/_add-finding-via-overview.qmd
+++ b/site/guide/model-validation/_add-finding-via-overview.qmd
@@ -4,15 +4,13 @@ To log a finding from the documentation overview:
 
 a. On your model's Documentation page, click **{{< fa plus >}} Add Model Finding**.
 
-a. On the Add Model Finding modal that opens, provide information for: 
+a. Select the finding type^[[Manage finding types](/guide/model-validation/manage-finding-types.qmd)] you want to add:
 
-   - **[title]{.smallcaps}**
-   - **[risk area]{.smallcaps}**
-   - **[owner]{.smallcaps}**
-   - **[severity]{.smallcaps}**
-   - **[due date]{.smallcaps}**
-   - **[documentation section]{.smallcaps}**
-   - **[description]{.smallcaps}**
+   - Validation Issue
+   - Policy Exception
+   - Model Limitation
+
+a. On the Add Model Finding modal that opens, provide information for your finding.
 
 a. When you are done, click **Save** to submit the finding. 
 
@@ -25,15 +23,13 @@ To log a finding from the documentation overview:
 
 a. On your model's Documentation page, click **{{< fa plus >}} Add Model Finding**.
 
-a. On the Add Model Finding modal that opens, provide information for: 
+a. Select the [finding type](/guide/model-validation/manage-finding-types.qmd){target="_blank"} you want to add:
 
-   - **[title]{.smallcaps}**
-   - **[risk area]{.smallcaps}**
-   - **[owner]{.smallcaps}**
-   - **[severity]{.smallcaps}**
-   - **[due date]{.smallcaps}**
-   - **[documentation section]{.smallcaps}**
-   - **[description]{.smallcaps}**
+   - Validation Issue
+   - Policy Exception
+   - Model Limitation
+
+a. On the Add Model Finding modal that opens, provide information for your finding.
 
 a. When you are done, click **Save** to submit the finding. 
 
