--- a/site/guide/model-validation/add-manage-model-findings.qmd
+++ b/site/guide/model-validation/add-manage-model-findings.qmd
@@ -5,7 +5,7 @@ aliases:
   - add-update-model-findings.html
 ---
 
-Add findings within the {{< var validmind.platform >}} at the model or documentation section level, update your findings to include proposed remediation plans and supporting documentation, or delete findings that no longer need to be tracked.
+Add findings at the model or documentation section level, update your findings to include proposed remediation plans and supporting documentation, or delete findings that no longer need to be tracked.
 
 ::: {.attn}
 
@@ -45,19 +45,15 @@ When linking findings to validation reports,[^5] you can add findings as you ass
 
 3. In the left sidebar that appears for your model, click **{{< fa file >}} Documents** and select a Validation Report type file.[^7]
 
-4. In any section of the report where the button is available, click **{{< fa link >}} Link Finding to Report**.
+4. In any section of the report where the button is available, click **{{< fa link >}} Link Finding to Report** and select the finding type[^8] you want to add:
 
-5. On the Link Finding to Report modal that opens, click **{{< fa plus >}} Create New Finding**.
+   - Validation Issue
+   - Policy Exception
+   - Model Limitation
 
-6. On the Add Model Finding modal that opens, provide information for:
+5. On the Link Finding to Report modal that opens, click **{{< fa plus >}} Add {x} Finding** where `{x}` is the type of finding.
 
-   - **[title]{.smallcaps}**
-   - **[risk area]{.smallcaps}**
-   - **[owner]{.smallcaps}**
-   - **[severity]{.smallcaps}**
-   - **[due date]{.smallcaps}**
-   - **[documentation section]{.smallcaps}**
-   - **[description]{.smallcaps}**
+6. On the Add Model Finding modal that opens, provide information for your finding.
 
 7. When you are done, click **Save** to submit the finding.
 
@@ -65,23 +61,15 @@ When linking findings to validation reports,[^5] you can add findings as you ass
 
 As findings get resolved or require other changes during the model validation process, you can update them:
 
-1. Locate the finding you want to update.[^8]
+1. Locate the finding you want to update.[^9]
 
-2. Click on a field to make changes. You can make updates to:
-
-   - **[title]{.smallcaps}** and **Description**
-   - **Proposed Remediation Plan**
-   - **[attachments]{.smallcaps}**[^9]
-   - **[status]{.smallcaps}**
-   - **[severity]{.smallcaps}**
-   - **[risk area]{.smallcaps}**
-   - **[due date]{.smallcaps}**
-   - **[assigned to]{.smallcaps}**
-   - **[documentation section]{.smallcaps}**
+2. Click on a field to make changes.
 
    You can also add comments to a finding.
 
-Most updates are applied immediately but you must click **Save** to make changes to the finding title, description, proposed remediation plan, and attachments effective. 
+::: {.callout}
+Most updates are applied immediately but you must click **Save** to make changes to the finding title, description, proposed remediation plan, and attachments effective.
+:::
 
 ### Track issue resolution
 
@@ -136,7 +124,7 @@ If you logged a finding in error or otherwise no longer need to track that findi
 
 [^2]: [Working with model documentation](/guide/model-documentation/working-with-model-documentation.qmd)
 
-[^3]: [Manage finding statuses](manage-finding-statuses.qmd)
+[^3]: [Manage finding types](manage-finding-types.qmd#manage-finding-type-statuses)
 
 [^4]: [Manage permissions](/guide/configuration/manage-permissions.qmd)
 
@@ -146,9 +134,9 @@ If you logged a finding in error or otherwise no longer need to track that findi
 
 [^7]: [Working with model documents](/guide/templates/working-with-model-documents.qmd)
 
-[^8]: [View and filter model findings](view-filter-model-findings.qmd)
+[^8]: [Manage finding types](manage-finding-types.qmd)
 
-[^9]: [Manage supporting documentation](#manage-supporting-documentation)
+[^9]: [View and filter model findings](view-filter-model-findings.qmd)
 
 [^10]: [View model activity](/guide/model-inventory/view-model-activity.qmd)
 
