--- a/site/guide/model-validation/_link-findings-to-reports.qmd
+++ b/site/guide/model-validation/_link-findings-to-reports.qmd
@@ -5,15 +5,19 @@
 
 1. In the left sidebar that appears for your model, click **{{< fa file >}} Documents** and select a Validation Report type file under Documents.^[[Working with model documents](/guide/templates/working-with-model-documents.qmd)]
 
-   Expand any subsection of the validation report you would like to work with.
+1. Expand any subsection of the validation report you would like to work with.
 
    For example, locate 2. Validation then select **2.1.1. Assumptions**.
 
-1. In any section of the report where the button is available, click **{{< fa link >}} Link Finding to Report**.
+1. In any section of the report where the button is available, click **{{< fa link >}} Link Finding to Report** and select the finding type^[[Manage finding types](/guide/model-validation/manage-finding-types.qmd)] you want to add:
+
+   - Validation Issue
+   - Policy Exception
+   - Model Limitation
 
    ![Validation report section 2.1.1. that shows a compliance assessment with the option to link to finding](/guide/model-validation/link-finding.png){fig-alt="A screenshot of the validation report section 2.1.1. that shows a compliance assessment with the option to link to finding" .screenshot}
 
-1. On the **Link Finding to Report** modal that opens, select from the list of available findings, or click **{{< fa plus >}} Create New Finding**.^[[Add and manage model findings](/guide/model-validation/add-manage-model-findings.qmd#add-findings-on-validation-reports)]
+1. On the **Link Finding to Report** modal that opens, select from the list of available findings, or click **{{< fa plus >}} Add {x} Finding** where `{x}` is the type of finding.^[[Add and manage model findings](/guide/model-validation/add-manage-model-findings.qmd#add-findings-on-validation-reports)]
 
 1. Click **Update Linked Findings**.
 
@@ -33,7 +37,9 @@
 
     ![Validation report with the link finding option highlighted](/notebooks/tutorials/model_validation/link-finding.png){width=90% fig-alt="Screenshot showing the validation report with the link finding option highlighted" .screenshot}
 
-1. Click **{{< fa plus >}} Create New Finding** to add a finding.
+1. Select **Validation Issue** as the [type of finding](/guide/model-validation/manage-finding-types.qmd){target="_blank"}.
+
+1. Click **{{< fa plus >}} Add Validation Issue Finding** to add a finding.
 
 1. Enter in the details for your finding, for example:
 
