+ Manage workflow tasks guide

--- a/site/guide/model-workflows/working-with-model-workflows.qmd
+++ b/site/guide/model-workflows/working-with-model-workflows.qmd
@@ -6,13 +6,14 @@ aliases:
 listing:
   - id: workflows
     type: grid
-    grid-columns: 2
+    grid-columns: 3
     max-description-length: 250
     sort: false
     fields: [title, description]
     contents:
     - manage-model-workflows.qmd
     - transition-model-workflows.qmd
+    - manage-workflow-tasks.qmd
 ---
 
 Once customized, use workflows to transition your models into their appropriate next stages throughout your model lifecycles.
