--- a/site/guide/model-workflows/manage-workflow-tasks.qmd
+++ b/site/guide/model-workflows/manage-workflow-tasks.qmd
@@ -4,3 +4,72 @@ date: last-modified
 ---
 
 View and interact with workflow transition tasks assigned to your user roles for all workflows on your models.
+
+:::{.callout}
+Tasks will only appear in your inbox if the workflow step[^1] is set up to display the action button to your user role.[^2]
+:::
+
+::: {.attn}
+
+## Prerequisites
+
+- [x] {{< var link.login >}}
+- [x] There are models registered in the model inventory.[^3]
+- [x] Model stages have already been customized for use in workflows.[^4]
+- [x] Workflows have already been set up for use with your models.[^5]
+- [x] You are a assigned role with sufficient permissions to transition the workflow into its next state.[^6]
+
+:::
+
+## View workflow tasks
+
+1. In the left sidebar, click **{{< fa bell >}} Updates**.
+
+2. Select the **Tasks** tab.
+
+3. From the in-{{< var vm.platform >}} task list, view and filter your tasks, access models attached to tasks, and transition model workflows into their next states:
+
+::: {.panel-tabset}
+
+### View and filter tasks
+
+To filter tasks:
+
+a. Click **{{< fa filter >}} Filter** to configure whether or not completed tasks are displayed:
+
+    - Toggle **Show competed tasks** to show completed tasks.
+    - Untoggle **Show completed tasks** to hide completed tasks.
+
+b. Click **Apply Filters** to narrow down results based on your selection.
+
+To show older tasks, scroll down to the bottom and click **Load More**.
+
+### Access model details
+
+To view the details of a model attached to a task, click the button displaying the name of the model.
+
+### Transition model workflows
+
+If an action is available to your role, you'll see it appear as an action button under a task:
+
+- Click **{{< fa arrow-right >}}** to open up the transition panel for your selected action. This arrow will be followed by the action name.
+- Enter your **[notes]{.smallcaps}** and any other additional inventory fields^[[Manage model inventory fields](/guide/model-inventory/manage-model-inventory-fields.qmd)] then click **Submit**.
+
+Once completed, action buttons will be grayed out.
+
+:::
+
+
+<!-- FOOTNOTES -->
+
+[^1]: [Setting up model workflows](setting-up-model-workflows.qmd#workflow-step-types)
+
+[^2]: [Manage roles](/guide/configuration/manage-roles.qmd)
+
+[^3]: [Register models in the inventory](/guide/model-inventory/register-models-in-inventory.qmd)
+
+[^4]: [Manage model stages](manage-model-stages.qmd)
+
+[^5]: [Configure model workflows](configure-model-workflows.qmd)
+
+[^6]: [Manage permissions](/guide/configuration/manage-permissions.qmd)
