--- a/site/guide/configuration/manage-platform-notifications.qmd
+++ b/site/guide/configuration/manage-platform-notifications.qmd
@@ -26,7 +26,9 @@ Unread {{< fa bell >}} Updates will be marked with a [pink {{< fa circle >}}]{.p
 
 1. In the left sidebar, click **{{< fa bell >}} Updates**.
 
-2. From the in-{{< var vm.platform >}} inbox, review updates, accept invites, mark updates as read, or dismiss updates entirely.
+2. Select the **Updates** tab.
+
+3. From the in-{{< var vm.platform >}} inbox, review updates, accept invites, mark updates as read, or dismiss updates entirely:
 
 ::: {.panel-tabset}
 
