--- a/site/guide/model-workflows/manage-workflow-tasks.qmd
+++ b/site/guide/model-workflows/manage-workflow-tasks.qmd
@@ -33,7 +33,14 @@ Tasks will only appear in your inbox if the workflow step[^1] is set up to displ
 
 ### View and filter tasks
 
-To filter tasks:
+Tasks are listed with the following information:
+
+- The name of the model the workflow is attached to
+- The current workflow state of the workflow[^7]
+- The name of the workflow attached to the model[^8]
+- The due date of the workflow, calculated from the workflow's expected duration
+
+#### Filter tasks
 
 a. Click **{{< fa filter >}} Filter** to configure whether or not completed tasks are displayed:
 
@@ -42,18 +49,20 @@ a. Click **{{< fa filter >}} Filter** to configure whether or not completed task
 
 b. Click **Apply Filters** to narrow down results based on your selection.
 
+#### Show more tasks
+
 To show older tasks, scroll down to the bottom and click **Load More**.
 
 ### Access model details
 
-To view the details of a model attached to a task, click the button displaying the name of the model.
+To view the details of a model attached to a workflow task, click the button displaying the name of the model.
 
 ### Transition model workflows
 
-If an action is available to your role, you'll see it appear as an action button under a task:
+If an action is available to your role,[^9] you'll see it appear as an action button under a workflow task:
 
 - Click **{{< fa arrow-right >}}** to open up the transition panel for your selected action. This arrow will be followed by the action name.
-- Enter your **[notes]{.smallcaps}** and any other additional inventory fields^[[Manage model inventory fields](/guide/model-inventory/manage-model-inventory-fields.qmd)] then click **Submit**.
+- Enter your **[notes]{.smallcaps}** and any other additional inventory fields[^10] then click **Submit**.
 
 Once completed, action buttons will be grayed out.
 
@@ -62,7 +71,7 @@ Once completed, action buttons will be grayed out.
 
 <!-- FOOTNOTES -->
 
-[^1]: [Setting up model workflows](setting-up-model-workflows.qmd#workflow-step-types)
+[^1]: [Workflow step types](setting-up-model-workflows.qmd#workflow-step-types)
 
 [^2]: [Manage roles](/guide/configuration/manage-roles.qmd)
 
@@ -73,3 +82,11 @@ Once completed, action buttons will be grayed out.
 [^5]: [Configure model workflows](configure-model-workflows.qmd)
 
 [^6]: [Manage permissions](/guide/configuration/manage-permissions.qmd)
+
+[^7]: [Workflow states](setting-up-model-workflows.qmd#workflow-states)
+
+[^8]: [Configure model workflows](configure-model-workflows.qmd)
+
+[^9]: [Transition model workflows](transition-model-workflows.qmd)
+
+[^10]: [Manage model inventory fields](/guide/model-inventory/manage-model-inventory-fields.qmd)
