--- a/site/guide/model-workflows/manage-workflow-tasks.qmd
+++ b/site/guide/model-workflows/manage-workflow-tasks.qmd
@@ -17,7 +17,7 @@ Tasks will only appear in your inbox if the workflow step[^1] is set up to displ
 - [x] There are models registered in the model inventory.[^3]
 - [x] Model stages have already been customized for use in workflows.[^4]
 - [x] Workflows have already been set up for use with your models.[^5]
-- [x] You are a assigned role with sufficient permissions to transition the workflow into its next state.[^6]
+- [x] You are a assigned role with sufficient permissions to transition workflows into their next states.[^6]
 
 :::
 
@@ -39,6 +39,7 @@ Tasks are listed with the following information:
 - The current workflow state of the workflow[^7]
 - The name of the workflow attached to the model[^8]
 - The due date of the workflow, calculated from the workflow's expected duration
+- Action items associated with that task
 
 #### Filter tasks
 
