Updates for frontend#1648

--- a/site/guide/model-workflows/manage-workflow-tasks.qmd
+++ b/site/guide/model-workflows/manage-workflow-tasks.qmd
@@ -3,10 +3,10 @@ title: "Manage workflow tasks"
 date: last-modified
 ---
 
-View and interact with workflow transition tasks assigned to your user roles for all workflows on your models.
+View and interact with outstanding workflow transition tasks assigned to your user roles for all workflows on your models.
 
 :::{.callout}
-Tasks will only appear in your inbox if the workflow step[^1] is set up to display the action button to your user role.[^2]
+Tasks will only appear in your inbox if the workflow step[^1] is set up to display the action button to your user role[^2] or model stakeholder type.[^3]
 :::
 
 ::: {.attn}
@@ -14,43 +14,32 @@ Tasks will only appear in your inbox if the workflow step[^1] is set up to displ
 ## Prerequisites
 
 - [x] {{< var link.login >}}
-- [x] There are models registered in the model inventory.[^3]
-- [x] Model stages have already been customized for use in workflows.[^4]
-- [x] Workflows have already been set up for use with your models.[^5]
-- [x] You are a assigned role with sufficient permissions to transition workflows into their next states.[^6]
+- [x] There are models registered in the model inventory.[^4]
+- [x] Model stages have already been customized for use in workflows.[^5]
+- [x] Workflows have already been set up for use with your models.[^6]
+- [x] You are a assigned role with sufficient permissions to transition workflows into their next states.[^7]
 
 :::
 
 ## View workflow tasks
 
-1. In the left sidebar, click **{{< fa bell >}} Updates**.
+1. In the left sidebar, click **{{< fa bell >}} My Inbox**.
 
 2. Select the **Tasks** tab.
 
-3. From the in-{{< var vm.platform >}} task list, view and filter your tasks, access models attached to tasks, and transition model workflows into their next states:
+3. From the in-{{< var vm.platform >}} task list, view your incomplete tasks, access models attached to tasks, and transition model workflows into their next states:
 
 ::: {.panel-tabset}
 
-### View and filter tasks
+### View tasks
 
 Tasks are listed with the following information:
 
 - The name of the model the workflow is attached to
-- The current workflow state of the workflow[^7]
-- The name of the workflow attached to the model[^8]
+- The current workflow state of the workflow[^8]
+- The name of the workflow attached to the model[^9]
 - The due date of the workflow, calculated from the workflow's expected duration
 - Action items associated with that task
-
-#### Filter tasks
-
-a. Click **{{< fa filter >}} Filter** to configure whether or not completed tasks are displayed:
-
-    - Toggle **Show competed tasks** to show completed tasks.
-    - Untoggle **Show completed tasks** to hide completed tasks.
-
-b. Click **Apply Filters** to narrow down results based on your selection.
-
-#### Show more tasks
 
 To show older tasks, scroll down to the bottom and click **Load More**.
 
@@ -60,12 +49,12 @@ To view the details of a model attached to a workflow task, click the button dis
 
 ### Transition model workflows
 
-If an action is available to your role,[^9] you'll see it appear as an action button under a workflow task:
+If an action is available to your role,[^10] you'll see it appear as an action button under a workflow task:
 
 - Click **{{< fa arrow-right >}}** to open up the transition panel for your selected action. This arrow will be followed by the action name.
-- Enter your **[notes]{.smallcaps}** and any other additional inventory fields[^10] then click **Submit**.
+- Enter your **[notes]{.smallcaps}** and any other additional inventory fields[^11] then click **Submit**.
 
-Once completed, action buttons will be grayed out.
+Once completed, tasks will be removed from your view.
 
 :::
 
@@ -76,18 +65,20 @@ Once completed, action buttons will be grayed out.
 
 [^2]: [Manage roles](/guide/configuration/manage-roles.qmd)
 
-[^3]: [Register models in the inventory](/guide/model-inventory/register-models-in-inventory.qmd)
+[^3]: [Manage model stakeholder types](/guide/configuration/manage-model-stakeholder-types.qmd)
 
-[^4]: [Manage model stages](manage-model-stages.qmd)
+[^4]: [Register models in the inventory](/guide/model-inventory/register-models-in-inventory.qmd)
 
-[^5]: [Configure model workflows](configure-model-workflows.qmd)
+[^5]: [Manage model stages](manage-model-stages.qmd)
 
-[^6]: [Manage permissions](/guide/configuration/manage-permissions.qmd)
+[^6]: [Configure model workflows](configure-model-workflows.qmd)
 
-[^7]: [Workflow states](setting-up-model-workflows.qmd#workflow-states)
+[^7]: [Manage permissions](/guide/configuration/manage-permissions.qmd)
 
-[^8]: [Configure model workflows](configure-model-workflows.qmd)
+[^8]: [Workflow states](setting-up-model-workflows.qmd#workflow-states)
 
-[^9]: [Transition model workflows](transition-model-workflows.qmd)
+[^9]: [Configure model workflows](configure-model-workflows.qmd)
 
-[^10]: [Manage model inventory fields](/guide/model-inventory/manage-model-inventory-fields.qmd)
+[^10]: [Transition model workflows](transition-model-workflows.qmd)
+
+[^11]: [Manage model inventory fields](/guide/model-inventory/manage-model-inventory-fields.qmd)
