--- a/site/guide/configuration/manage-platform-notifications.qmd
+++ b/site/guide/configuration/manage-platform-notifications.qmd
@@ -24,7 +24,7 @@ Changes are automatically saved to your account and do not affect other users.
 Unread {{< fa bell >}} Updates will be marked with a [pink {{< fa circle >}}]{.pink}.
 :::
 
-1. In the left sidebar, click **{{< fa bell >}} My Inbox**.
+1. In the left sidebar, click **{{< fa inbox >}} My Inbox**.
 
 2. Select the **Updates** tab.
 
