--- a/site/guide/model-workflows/manage-workflow-tasks.qmd
+++ b/site/guide/model-workflows/manage-workflow-tasks.qmd
@@ -23,7 +23,7 @@ Tasks will only appear in your inbox if the workflow step[^1] is set up to displ
 
 ## View workflow tasks
 
-1. In the left sidebar, click **{{< fa bell >}} My Inbox**.
+1. In the left sidebar, click **{{< fa inbox >}} My Inbox**.
 
 2. Select the **Tasks** tab.
 
