--- a/site/guide/configuration/manage-platform-notifications.qmd
+++ b/site/guide/configuration/manage-platform-notifications.qmd
@@ -24,9 +24,11 @@ Changes are automatically saved to your account and do not affect other users.
 Unread {{< fa bell >}} Updates will be marked with a [pink {{< fa circle >}}]{.pink}.
 :::
 
-1. In the left sidebar, click **{{< fa bell >}} Updates**.
+1. In the left sidebar, click **{{< fa inbox >}} My Inbox**.
 
-2. From the in-{{< var vm.platform >}} inbox, review updates, accept invites, mark updates as read, or dismiss updates entirely.
+2. Select the **Updates** tab.
+
+3. From the in-{{< var vm.platform >}} inbox, review updates, accept invites, mark updates as read, or dismiss updates entirely:
 
 ::: {.panel-tabset}
 
