Run make get-source

--- a/site/notebooks/code_samples/capital_markets/quickstart_option_pricing_models.ipynb
+++ b/site/notebooks/code_samples/capital_markets/quickstart_option_pricing_models.ipynb
@@ -1016,12 +1016,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": null,
    "id": "d96969b7",
    "metadata": {},
    "outputs": [],
    "source": [
-    "from plotly_express import bar\n",
+    "from plotly.express import bar\n",
     "from validmind.vm_models.figure import Figure\n",
     "from validmind.vm_models.result import TestResult\n",
     "import plotly.graph_objects as go\n",
