--- a/site/notebooks/code_samples/custom_tests/implement_custom_tests.ipynb
+++ b/site/notebooks/code_samples/custom_tests/implement_custom_tests.ipynb
@@ -679,7 +679,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import plotly_express as px\n",
+    "import plotly.express as px\n",
     "\n",
     "\n",
     "@vm.test(\"my_custom_tests.ParameterExample\")\n",
@@ -737,7 +737,7 @@
    "outputs": [],
    "source": [
     "import numpy as np\n",
-    "import plotly_express as px\n",
+    "import plotly.express as px\n",
     "\n",
     "\n",
     "@vm.test(\"my_custom_tests.ComplexOutput\")\n",
