--- a/site/notebooks/code_samples/custom_tests/integrate_external_test_providers.ipynb
+++ b/site/notebooks/code_samples/custom_tests/integrate_external_test_providers.ipynb
@@ -408,7 +408,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import plotly_express as px\n",
+    "import plotly.express as px\n",
     "\n",
     "\n",
     "@test(\"my_custom_tests.ParameterExample\")\n",
@@ -427,7 +427,7 @@
     "    )\n",
     "\n",
     "\n",
-    "parameter_example.save(tests_folder, imports=[\"import plotly_express as px\"])"
+    "parameter_example.save(tests_folder, imports=[\"import plotly.express as px\"])"
    ]
   },
   {
@@ -437,7 +437,7 @@
    "outputs": [],
    "source": [
     "import numpy as np\n",
-    "import plotly_express as px\n",
+    "import plotly.express as px\n",
     "\n",
     "\n",
     "@test(\"my_custom_tests.ComplexOutput\")\n",
@@ -466,7 +466,7 @@
     "\n",
     "\n",
     "complex_output.save(\n",
-    "    tests_folder, imports=[\"import numpy as np\", \"import plotly_express as px\"]\n",
+    "    tests_folder, imports=[\"import numpy as np\", \"import plotly.express as px\"]\n",
     ")"
    ]
   },
