--- a/site/notebooks/quickstart/quickstart_model_documentation.ipynb
+++ b/site/notebooks/quickstart/quickstart_model_documentation.ipynb
@@ -173,6 +173,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "57bdd8f8",
    "metadata": {},
    "source": [
     "<a id='toc3_1_'></a>\n",
@@ -210,6 +211,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "bc5c8bd4",
    "metadata": {},
    "source": [
     "<a id='toc3_2_1_'></a>\n",
@@ -263,10 +265,10 @@
     "import validmind as vm\n",
     "\n",
     "vm.init(\n",
-    "    # api_host=\"...\",\n",
-    "    # api_key=\"...\",\n",
-    "    # api_secret=\"...\",\n",
-    "    # model=\"...\",\n",
+    "    api_host=\"https://api.validmind.ai/api/v1/tracking\",\n",
+    "    api_key=\"<your-api-key>\",\n",
+    "    api_secret=\"<your-api-secret>\",\n",
+    "    model=\"<your-model-id>\"\n",
     ")"
    ]
   },
@@ -455,6 +457,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "541466ce",
    "metadata": {},
    "source": [
     "<a id='toc7_'></a>\n",
@@ -508,6 +511,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "78c85786",
    "metadata": {},
    "source": [
     "<a id='toc7_2_'></a>\n",
@@ -537,6 +541,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "c6662e6b",
    "metadata": {},
    "source": [
     "<a id='toc8_'></a>\n",
@@ -585,6 +590,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "5da79af3",
    "metadata": {},
    "source": [
     "<a id='toc9_'></a>\n",
@@ -611,6 +617,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "5fa481bf",
    "metadata": {},
    "source": [
     "<a id='toc9_1_'></a>\n",
@@ -643,6 +650,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "a5ade4b3",
    "metadata": {},
    "source": [
     "<a id='toc10_'></a>\n",
@@ -782,6 +790,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "790f47cb",
    "metadata": {},
    "source": [
     "<a id='toc13_'></a>\n",
