--- a/site/notebooks/tutorials/model_validation/3-developing_challenger_model.ipynb
+++ b/site/notebooks/tutorials/model_validation/3-developing_challenger_model.ipynb
@@ -635,30 +635,22 @@
     "    <img src= \"link-finding.png\" alt=\"Screenshot showing the validation report with the link finding option highlighted\" style=\"border: 2px solid #083E44; border-radius: 8px; border-right-width: 2px; border-bottom-width: 3px;\">\n",
     "    <br><br>\n",
     "\n",
-    "5. Click **+ Create New Finding** to add a finding.\n",
+    "5. Select **Validation Issue** as the type of finding.\n",
     "\n",
-    "6. Enter in the details for your finding, for example:\n",
+    "6. Click **+ Add Validation Issue Finding** to add a finding.\n",
+    "\n",
+    "76. Enter in the details for your finding, for example:\n",
     "\n",
     "    - **TITLE** — Champion Logistic Regression Model Fails Minimum Accuracy Threshold\n",
     "    - **RISK AREA** — Model Performance\n",
     "    - **DOCUMENTATION SECTION** — 3.2. Model Evaluation\n",
     "    - **DESCRIPTION** — The logistic regression champion model was subjected to a Minimum Accuracy test to determine whether its predictive accuracy meets the predefined performance threshold of 0.7. The model achieved an accuracy score of 0.6136, which falls below the required minimum. As a result, the test produced a Fail outcome.\n",
     "\n",
-    "7. Click **Save**.\n",
+    "8. Click **Save**.\n",
     "\n",
-    "8. Select the finding you just added to link to your validation report:\n",
+    "9. Select the finding you just added to link to your validation report and click **Update Linked Findings** to insert your finding.\n",
     "\n",
-    "    <img src= \"select-finding.png\" alt=\"Screenshot showing the newly created finding selected to be inserted\" style=\"border: 2px solid #083E44; border-radius: 8px; border-right-width: 2px; border-bottom-width: 3px;\">\n",
-    "    <br><br>\n",
-    "\n",
-    "9. Click **Update Linked Findings** to insert your finding.\n",
-    "\n",
-    "10. Confirm that finding you inserted has been correctly inserted into section **2.2.2. Model Performance**  of the report:\n",
-    "\n",
-    "    <img src= \"inserted-finding.png\" alt=\"Screenshot showing the validation report with the new finding linked\" style=\"border: 2px solid #083E44; border-radius: 8px; border-right-width: 2px; border-bottom-width: 3px;\">\n",
-    "    <br><br>\n",
-    "\n",
-    "11. Click on the finding to expand the finding, where you can adjust details such as severity, owner, due date, status, etc. as well as include proposed remediation plans or supporting documentation as attachments."
+    "10. Click on the finding to expand the finding, where you can adjust details such as severity, owner, due date, status, etc. as well as include proposed remediation plans or supporting documentation as attachments."
    ]
   },
   {
