Exclude admin-ui from platform releases roundup

--- a/site/releases/validmind-platform-releases.qmd
+++ b/site/releases/validmind-platform-releases.qmd
@@ -9,6 +9,8 @@ listing:
   max-description-length: 300
   type: default
   categories: true
+  exclude:
+    categories: admin-ui
   sort-ui: true
   filter-ui: true
   page-size: 12
