Edit to notebook, should remove old comment

--- a/site/notebooks/EXECUTED/test.ipynb
+++ b/site/notebooks/EXECUTED/test.ipynb
@@ -5,7 +5,9 @@
    "id": "46a9299e",
    "metadata": {},
    "source": [
-    "# test executed notebook!"
+    "# test executed notebook!\n",
+    "\n",
+    "edit to notebook"
    ]
   }
  ],
