--- a/site/releases/validmind-platform-releases.qmd
+++ b/site/releases/validmind-platform-releases.qmd
@@ -10,7 +10,7 @@ listing:
   type: default
   categories: true
   exclude:
-    categories: admin-ui
+    categories: "admin ui"
   sort-ui: true
   filter-ui: true
   page-size: 12
