--- a/site/guide/model-validation/customize-model-findings-layout.qmd
+++ b/site/guide/model-validation/customize-model-findings-layout.qmd
@@ -25,7 +25,7 @@ Customize what is displayed on your list of all model findings:
 
 1. In the left sidebar, click **{{< fa triangle-exclamation >}} Findings** for the list of all model findings.
 
-2. Select a finding type[^9] to view from the tabs:
+2. Select a finding type[^3] to view from the tabs:
 
    - Validation Issue
    - Policy Exception
@@ -35,9 +35,9 @@ Customize what is displayed on your list of all model findings:
 
    - Search for a column name in the list to narrow down results.
    - Toggle visibility for each item and drag each option to change the order.
-   - Available columns are determined by your model finding fields.[^10]
+   - Available columns are determined by your model finding fields.[^4]
 
-Once customized, you can save a view for later application.[^11]
+Once customized, you can save a view for later application.[^5]
 
 ### Manage custom findings views
 
@@ -51,9 +51,9 @@ Saved views are unique to you and do not display for other users in your organiz
 
 You can save custom findings configuration as a view to reapply at any time:
 
-1. Customize a findings layout.[^12]
+1. Customize a findings layout.[^6]
 
-   You can also apply filters or sorting before saving your view to include them in the view.[^13]
+   You can also apply filters or sorting before saving your view to include them in the view.[^7]
 
 {{< include /guide/model-inventory/_save-layout-view.qmd >}}
 
@@ -75,4 +75,14 @@ Deletion of saved views is permanent.
 [^1]: [Register models in the inventory](/guide/model-inventory/register-models-in-inventory.qmd)
 
 [^2]: [Add and manage model findings](add-manage-model-findings.qmd)
+
+[^3]: [Manage finding types](/guide/model-validation/manage-finding-types.qmd)
+
+[^4]: [Manage model finding fields](manage-model-finding-fields.qmd)
+
+[^5]: [Manage custom findings views](#manage-custom-findings-views)
+
+[^6]: [Customize model findings layout](#customize-model-findings-layout)
+
+[^7]: [Filter and sort model findings](#filter-and-sort-model-findings)
 
