--- a/site/guide/model-validation/customize-model-findings-layouts.qmd
+++ b/site/guide/model-validation/customize-model-findings-layouts.qmd
@@ -1,9 +1,9 @@
 ---
-title: "Customize model findings layout"
+title: "Customize model findings layouts"
 date: last-modified
 ---
 
-Configure the information that displays by default on the list of all tracked model findings.
+Configure the information that displays by default on the list of all tracked model findings for each finding type.
 
 ::: {.attn}
 
@@ -15,7 +15,7 @@ Configure the information that displays by default on the list of all tracked mo
 
 :::
 
-## Customize model findings layout
+## Customize model findings layouts
 
 :::{.callout}
 Changes are automatically saved to your account and do not affect other users.
@@ -82,7 +82,7 @@ Deletion of saved views is permanent.
 
 [^5]: [Manage custom findings views](#manage-custom-findings-views)
 
-[^6]: [Customize model findings layout](#customize-model-findings-layout)
+[^6]: [Customize model findings layouts](#customize-model-findings-layout)
 
 [^7]: [Filter and sort model findings](#filter-and-sort-model-findings)
 
