--- a/site/guide/model-validation/_view-all-findings.qmd
+++ b/site/guide/model-validation/_view-all-findings.qmd
@@ -12,7 +12,7 @@ To view findings for all models:
    In the page that opens is a list of all model findings for that type.
 
    ::: {.callout}
-   Filter this list to include only findings you want to see,^[[Filter and sort model findings](/guide/model-validation/view-filter-model-findings.qmd#filter-and-sort-model-findings)] or toggle visibilty for column headers.^[[Customize model findings layout](/guide/model-validation/customize-model-findings-layout.qmd)]
+   Filter this list to include only findings you want to see,^[[Filter and sort model findings](/guide/model-validation/view-filter-model-findings.qmd#filter-and-sort-model-findings)] or toggle visibilty for column headers.^[[Customize model findings layouts](/guide/model-validation/customize-model-findings-layouts.qmd)]
 
    :::
 
@@ -44,7 +44,7 @@ To view findings for all models:
 
    In the page that opens is a list of all model findings for that type.
 
-    [Filter this list](/guide/model-validation/view-filter-model-findings.qmd#filter-and-sort-model-findings){target="_blank"} to include only findings you want to see, or [toggle visibilty for column headers](/guide/model-validation/customize-model-findings-layout.qmd){target="_blank"}.
+    [Filter this list](/guide/model-validation/view-filter-model-findings.qmd#filter-and-sort-model-findings){target="_blank"} to include only findings you want to see, or [toggle visibilty for column headers](/guide/model-validation/customize-model-findings-layouts.qmd){target="_blank"}.
 
 1. Click on any model finding for more information, including the proposed remediation plan and [any supporting attachments](/guide/model-validation/add-manage-model-findings.qmd#manage-supporting-documentation){target="_blank"}.
 
