Draft: Customize model finding layouts

--- a/site/guide/model-validation/customize-model-findings-layouts.qmd
+++ b/site/guide/model-validation/customize-model-findings-layouts.qmd
@@ -15,13 +15,13 @@ Configure the information that displays by default on the list of all tracked mo
 
 :::
 
-## Customize model findings layouts
+## Customize finding type layouts
 
 :::{.callout}
 Changes are automatically saved to your account and do not affect other users.
 :::
 
-Customize what is displayed on your list of all model findings:
+Customize what is displayed on your list of all model findings for each finding type:
 
 1. In the left sidebar, click **{{< fa triangle-exclamation >}} Findings** for the list of all model findings.
 
@@ -49,7 +49,7 @@ Saved views are unique to you and do not display for other users in your organiz
 
 #### Save a findings view
 
-You can save custom findings configuration as a view to reapply at any time:
+You can save custom findings configuration as a view to reapply at any time for each finding type:
 
 1. Customize a findings layout.[^6]
 
@@ -82,7 +82,7 @@ Deletion of saved views is permanent.
 
 [^5]: [Manage custom findings views](#manage-custom-findings-views)
 
-[^6]: [Customize model findings layouts](#customize-model-findings-layout)
+[^6]: [Customize finding type layouts](#customize-finding-type-layouts)
 
 [^7]: [Filter and sort model findings](#filter-and-sort-model-findings)
 
