--- a/site/guide/reporting/export-findings.qmd
+++ b/site/guide/reporting/export-findings.qmd
@@ -15,52 +15,19 @@ Export your tracked model findings as comma-delimited tables (`.csv`) for use ou
 
 :::
 
-## Export model documentation
+## Export findings by type
 
-1. In the left sidebar, click **{{< fa cubes >}} Inventory**.
+1. In the left sidebar, click **{{< fa triangle-exclamation >}} Findings** for the list of all model findings.
 
-2. Select a model or find your model by applying a filter or searching for it.[^4]
+2. Select a finding type[^3] to export from the tabs:
 
-3. In the left sidebar that appears for your model, click **{{< fa file >}} Documents** and select a Document type file.^
+   - Validation Issue
+   - Policy Exception
+   - Model Limitation
 
-4. In right sidebar, click **{{< fa download >}} Export Document**.
+3. Click **{{< fa download >}} Export**.
 
-    Configure whether or not comments[^5] left on your document should be exported in your document.
-
-5. Click **{{< fa file-arrow-down >}} Download File** to download the file locally on your machine.
-
-## Export validation report
-
-1. In the left sidebar, click **{{< fa cubes >}} Inventory**.
-
-2. Select a model or find your model by applying a filter or searching for it.[^6]
-
-3. In the left sidebar that appears for your model, click **{{< fa file >}} Documents** and select a Validation Report type file.^
-
-4. In right sidebar, click **{{< fa download >}} Export Document**.
-
-5. Configure what is exported in your document by checking off the relevant boxes:
-
-   - Include compliance summary[^7]
-   - Include validation guidelines information[^8]
-   - Include validation guideline adherence details
-   - Include comments left on document[^9]
-
-6. Click **{{< fa file-arrow-down >}} Download File** to download the file locally on your machine.
-
-## Export ongoing monitoring documentation
-
-1. In the left sidebar, click **{{< fa cubes >}} Inventory**.
-
-2. Select a model or find your model by applying a filter or searching for it.[^10]
-
-3. In the left sidebar that appears for your model, click **{{< fa file >}} Documents** and select an Ongoing Monitoring type file.[^11]
-
-4. In right sidebar, click **{{< fa download >}} Export Document**.
-
-    Configure whether or not comments[^12] left on your document should be exported in your document.
-
-5. Click **{{< fa file-arrow-down >}} Download File** to download the file locally on your machine.
+    A `.csv` file will be automatically downloaded.
 
 
 <!-- FOOTNOTES -->
@@ -69,29 +36,5 @@ Export your tracked model findings as comma-delimited tables (`.csv`) for use ou
 
 [^2]: [Add and manage model findings](add-manage-model-findings.qmd)
 
+[^3]: [Manage finding types](/guide/model-validation/manage-finding-types.qmd)
 
-<!-- FOOTNOTES -->
-
-<!-- [^1]: [Register models in the inventory](/guide/model-inventory/register-models-in-inventory.qmd)
-
-[^2]: [Working with model documents](/guide/templates/working-with-model-documents.qmd)
-
-[^3]: [Manage permissions](/guide/configuration/manage-permissions.qmd)
-
-[^4]: [Working with the model inventory](/guide/model-inventory/working-with-model-inventory.qmd#search-filter-and-sort-models)
-
-[^5]: [Collaborate with others](/guide/model-documentation/collaborate-with-others.qmd#commenting)
-
-[^6]: [Working with the model inventory](/guide/model-inventory/working-with-model-inventory.qmd#search-filter-and-sort-models)
-
-[^7]: [Assess compliance](/guide/model-validation/assess-compliance.qmd)
-
-[^8]: [Manage validation guidelines](/guide/model-validation/manage-validation-guidelines.qmd)
-
-[^9]: [Collaborate with others](/guide/model-documentation/collaborate-with-others.qmd#commenting)
-
-[^10]: [Working with the model inventory](/guide/model-inventory/working-with-model-inventory.qmd#search-filter-and-sort-models)
-
-[^11]: [Ongoing monitoring](/guide/monitoring/ongoing-monitoring.qmd)
-
-[^12]: [Collaborate with others](/guide/model-documentation/collaborate-with-others.qmd#commenting) -->
