Export documentation > Export documents

--- a/site/about/overview-model-risk-management.qmd
+++ b/site/about/overview-model-risk-management.qmd
@@ -220,4 +220,4 @@ By integrating these features, {{< var vm.product >}} provides a comprehensive s
 
 [^4]: [Working with document templates](/guide/templates/working-with-document-templates.qmd)
 
-[^5]: [Export documentation](/guide/reporting/export-documentation.qmd)
+[^5]: [Export documents](/guide/reporting/export-documents.qmd)
