--- a/site/releases/2023/release-notes-2023-may-30.qmd
+++ b/site/releases/2023/release-notes-2023-may-30.qmd
@@ -53,7 +53,7 @@ Plots and visual outputs have been enhanced with the Plotly package. Users can n
 :::
 
 ::: {.w-30-ns .tc}
-[Export documentation](/guide/reporting/export-documentation.qmd){.button .button-green}
+[Export documents](/guide/reporting/export-documents.qmd){.button .button-green}
 
 :::
 
