--- a/site/releases/2025/2025-mar-07/release-notes.qmd
+++ b/site/releases/2025/2025-mar-07/release-notes.qmd
@@ -87,7 +87,7 @@ We now support additional configuration when exporting validation reports, allow
 :::
 
 ::: {.w-30-ns}
-[Export documentation](/guide/reporting/export-documentation.qmd#export-validation-report){.button}
+[Export documents](/guide/reporting/export-documents.qmd#export-validation-report){.button}
 :::
 
 ::::
