--- a/site/guide/reporting/export-findings.qmd
+++ b/site/guide/reporting/export-findings.qmd
@@ -27,7 +27,22 @@ Export your tracked model findings as comma-delimited tables (`.csv`) for use ou
 
 3. Click **{{< fa download >}} Export**.
 
-    A `.csv` file will be automatically downloaded.
+    A `.csv` file will be automatically downloaded. By default, the export will include the following column headers:
+
+    - Finding ID
+    - Title
+    - Description
+    - Finding Type
+    - Status
+    - Severity
+    - Risk Area
+    - Business Unit
+    - Model
+    - Reporter
+    - Owner
+    - Due Date
+    - Created At
+    - Updated At
 
 
 <!-- FOOTNOTES -->
