--- a/site/guide/reporting/export-findings.qmd
+++ b/site/guide/reporting/export-findings.qmd
@@ -25,24 +25,9 @@ Export your tracked model findings as comma-delimited tables (`.csv`) for use ou
    - Policy Exception
    - Model Limitation
 
-3. Click **{{< fa download >}} Export**.
+3. Click **{{< fa download >}} Export** to export a list of your selected finding type.
 
-    A `.csv` file will be automatically downloaded. By default, the export will include the following column headers:
-
-    - Finding ID
-    - Title
-    - Description
-    - Finding Type
-    - Status
-    - Severity
-    - Risk Area
-    - Business Unit
-    - Model
-    - Reporter
-    - Owner
-    - Due Date
-    - Created At
-    - Updated At
+    A `.csv` file will be automatically downloaded with the default column headers.[^4]
 
 
 <!-- FOOTNOTES -->
@@ -52,4 +37,22 @@ Export your tracked model findings as comma-delimited tables (`.csv`) for use ou
 [^2]: [Add and manage model findings](add-manage-model-findings.qmd)
 
 [^3]: [Manage finding types](/guide/model-validation/manage-finding-types.qmd)
+
+[^4]:
+
+    - Finding ID
+    - Title
+    - Description
+    - Finding Type
+    - Status
+    - Severity
+    - [Risk Area](/guide/model-validation/manage-validation-guidelines.qmd#set-up-validation-guidelines)
+    - [Business Unit](/guide/configuration/set-up-your-organization.qmd#manage-business-units)
+    - [Model](/guide/model-inventory/working-with-model-inventory.qmd)
+    - Reporter
+    - Owner
+    - Due Date
+    - Created At
+    - Updated At
+
 
