Update API reference to use prod server

--- a/site/reference/validmind-rest-api-vm.qmd
+++ b/site/reference/validmind-rest-api-vm.qmd
@@ -26,7 +26,7 @@ The {{< var validmind.platform >}} provides a RESTful APIs to programmatically i
 ## Base URL
 
 ```
-https://api.dev.vm.validmind.ai/vm/api/v1/
+https://api.prod.validmind.ai/vm/api/v1/
 ```
 
 ## Versioning
@@ -47,7 +47,7 @@ All API endpoints require authentication using two headers that must be included
 To use this cURL example, replace `API_KEY` and `API_SECRET` with your own credentials:
 
 ```
-curl -X GET "https://api.dev.vm.validmind.ai/vm/api/v1/models" \
+curl -X GET "https://api.prod.validmind.ai/vm/api/v1/models" \
   -H 'accept: application/json' \
   -H 'x-api-key: API_KEY' \
   -H 'x-api-secret: API_SECRET'
