--- a/site/reference/vm-api.qmd
+++ b/site/reference/vm-api.qmd
@@ -9,9 +9,9 @@ bread-crumbs: false
 <script type="module" src="https://unpkg.com/rapidoc/dist/rapidoc-min.js"></script>
 
 <rapi-doc 
-    spec-url="https://api.dev.vm.validmind.ai/vm/api/v1/swagger.json"
-    server-url="https://api.dev.vm.validmind.ai/vm/api/v1/"
-    default-api-server="https://api.dev.vm.validmind.ai/vm/api/v1/"
+    spec-url="https://api.prod.validmind.ai/vm/api/v1/swagger.json"
+    server-url="https://api.prod.validmind.ai/vm/api/v1/"
+    default-api-server="https://api.prod.validmind.ai/vm/api/v1/"
     show-header="false"
     theme="light"
     load-fonts="true"
