--- a/site/guide/reporting/export-findings.qmd
+++ b/site/guide/reporting/export-findings.qmd
@@ -25,9 +25,11 @@ Export your tracked model findings as comma-delimited tables (`.csv`) for use ou
    - Policy Exception
    - Model Limitation
 
-3. Click **{{< fa download >}} Export** to export a list of your selected finding type.
+3. (Optional) Apply any filters[^4] to the list of findings to narrow down results.
 
-    A `.csv` file will be automatically downloaded with the default column headers.[^4]
+4. Click **{{< fa download >}} Export** to export a list of your selected finding type with your filters applied.
+
+    A `.csv` file will be automatically downloaded with the default column headers.[^5]
 
 
 <!-- FOOTNOTES -->
@@ -38,7 +40,9 @@ Export your tracked model findings as comma-delimited tables (`.csv`) for use ou
 
 [^3]: [Manage finding types](/guide/model-validation/manage-finding-types.qmd)
 
-[^4]:
+[^4]: [View and filter model findings](/guide/model-validation/view-filter-model-findings.qmd#filter-and-sort-model-findings)
+
+[^5]:
 
     - Finding ID
     - Title
