--- a/site/guide/configuration/customize-your-dashboard.qmd
+++ b/site/guide/configuration/customize-your-dashboard.qmd
@@ -156,7 +156,7 @@ Removing a widget from a dashboard will not delete the linked view or analytics 
 
 [^2]: [Manage custom inventory views](/guide/model-inventory/customize-model-inventory-layout.qmd#manage-custom-inventory-views)
 
-[^3]: [Customize model findings layout](/guide/model-validation/view-filter-model-findings.qmd#customize-model-findings-layout)
+[^3]: [Customize model findings layouts](/guide/model-validation/customize-model-findings-layouts.qmd)
 
 [^4]: [Working with analytics](/guide/reporting/working-with-analytics.qmd)
 
