Setup: Export inventory

--- a/site/guide/guides.qmd
+++ b/site/guide/guides.qmd
@@ -96,7 +96,7 @@ listing:
   - id: guides-reports
     contents: 
     - reporting/working-with-analytics.qmd
-    - reporting/export-documents.qmd
+    - reporting/generating-exports.qmd
     type: grid
     max-description-length: 250
     sort: false
@@ -203,7 +203,7 @@ Then, prepare validation reports, work with findings and evidence, and collabora
 
 ## Reporting
 
-Review reports or export your documentation for external records:
+Review analytics or export your documents, model inventoru, and findings for external records:
 
 :::{#guides-reports}
 :::
