Draft: Export inventory

--- a/site/guide/reporting/export-findings.qmd
+++ b/site/guide/reporting/export-findings.qmd
@@ -3,7 +3,7 @@ title: "Export findings"
 date: last-modified
 ---
 
-Export your tracked model findings as comma-delimited tables (`.csv`) for use outside of the {{< var validmind.platform >}}.
+Export tracked model findings as comma-delimited tables (`.csv`).
 
 ::: {.attn}
 
