--- a/site/guide/reporting/export-documents.qmd
+++ b/site/guide/reporting/export-documents.qmd
@@ -57,7 +57,7 @@ Export model documentation, validation reports, and ongoing monitoring reports a
 
 6. Click **{{< fa file-arrow-down >}} Download File** to download the file locally on your machine.
 
-## Export ongoing monitoring documentation
+## Export ongoing monitoring reports
 
 1. In the left sidebar, click **{{< fa cubes >}} Inventory**.
 
