--- a/site/releases/2025/2025-jan-31/release-notes.qmd
+++ b/site/releases/2025/2025-jan-31/release-notes.qmd
@@ -204,7 +204,7 @@ Several enhancements to the {{< var validmind.developer >}} focus on ongoing mon
 
 - **New notebook**: Learn how to use ongoing monitoring with credit risk datasets in this step-by-step guide for the {{< var validmind.developer >}}.
 
-    - Use our new metrics for data and model drift, and populate the ongoing monitoring documentation for a scorecard model.[^1]
+    - Use our new metrics for data and model drift, and populate the ongoing monitoring report for a scorecard model.[^1]
 
 ::: {.column-margin}
 :::{#ongoing-monitoring}
