--- a/site/guide/reporting/export-inventory.qmd
+++ b/site/guide/reporting/export-inventory.qmd
@@ -14,7 +14,7 @@ Export lists of models tracked in the inventory as comma-delimited tables (`.csv
 
 :::
 
-## Export findings by type
+## Export lists of models
 
 1. In the left sidebar, click **{{< fa cubes >}} Inventory**.
 
