--- a/site/guide/reporting/export-findings.qmd
+++ b/site/guide/reporting/export-findings.qmd
@@ -25,11 +25,14 @@ Export your tracked model findings as comma-delimited tables (`.csv`) for use ou
    - Policy Exception
    - Model Limitation
 
-3. (Optional) Apply any filters[^4] to the list of findings to narrow down results.
+3. (Optional) Narrow down and organize the list of findings and column headers you want to export by:
 
-4. Click **{{< fa download >}} Export** to export a list of your selected finding type with your filters applied.
+    - Filtering and sorting findings[^4]
+    - Toggling visibility of and reordering column headers[^5]
 
-    A `.csv` file will be automatically downloaded with the default column headers.[^5]
+4. Click **{{< fa download >}} Export** to export a list of your selected finding type with your adjustments applied.
+
+    A `.csv` file will be automatically downloaded with your configuration.
 
 
 <!-- FOOTNOTES -->
@@ -42,21 +45,7 @@ Export your tracked model findings as comma-delimited tables (`.csv`) for use ou
 
 [^4]: [View and filter model findings](/guide/model-validation/view-filter-model-findings.qmd#filter-and-sort-model-findings)
 
-[^5]:
+[^5]: [Customize model findings layouts](/guide/model-validation/customize-model-findings-layouts.qmd)
 
-    - Finding ID
-    - Title
-    - Description
-    - Finding Type
-    - Status
-    - Severity
-    - [Risk Area](/guide/model-validation/manage-validation-guidelines.qmd#set-up-validation-guidelines)
-    - [Business Unit](/guide/configuration/set-up-your-organization.qmd#manage-business-units)
-    - [Model](/guide/model-inventory/working-with-model-inventory.qmd)
-    - Reporter
-    - Owner
-    - Due Date
-    - Created At
-    - Updated At
 
 
