--- a/site/guide/reporting/export-findings.qmd
+++ b/site/guide/reporting/export-findings.qmd
@@ -45,7 +45,7 @@ Export your tracked model findings as comma-delimited tables (`.csv`) for use ou
 
 [^4]: [View and filter model findings](/guide/model-validation/view-filter-model-findings.qmd#filter-and-sort-model-findings)
 
-[^5]: [Customize model findings layouts](/guide/model-validation/customize-model-findings-layouts.qmd)
+[^5]: [Customize model findings layouts](/guide/model-validation/customize-model-findings-layouts.qmd#customize-finding-type-layouts)
 
 
 
